@@ -530,6 +530,18 @@
 #address <host>[:<port>]
 #topic <topic> [[[out | in | both] qos-level] local-prefix remote-prefix]
 
+# If the bridge has more than one address given in the address/addresses
+# configuration, the round_robin option defines the behaviour of the bridge on
+# a failure of the bridge connection. If round_robin is false, the default
+# value, then the first address is treated as the main bridge connection. If
+# the connection fails, the other secondary addresses will be attempted in
+# turn. Whilst connected to a secondary bridge, the bridge will periodically
+# attempt to reconnect to the main bridge until successful.
+# If round_robin is true, then all addresses are treated as equals. If a
+# connection fails, the next address will be tried and if successful will
+# remain connected until it fails
+#round_robin false
+
 # Set the client id for this bridge connection. If not defined, 
 # this defaults to 'name.hostname' where name is the connection 
 # name and hostname is the hostname of this computer.
